[project]
name = "any-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "google-genai>=1.27.0",
    "httpx>=0.28.1",
    "openai>=1.97.1",
    "prettytable>=3.16.0",
    "pyyaml>=6.0.2",
    "uvicorn>=0.35.0",
]
